--- a/admin/package.json
+++ b/admin/package.json
@@ -43,6 +43,7 @@
     "iconv-lite": "^0.4.19",
     "jsonwebtoken": "^8.1.1",
     "logdna": "^1.4.2",
+    "longjohn": "^0.2.12",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.1",
     "morgan": "~1.9.0",
