--- a/functions/censusUploadProcessor/package.json
+++ b/functions/censusUploadProcessor/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "dotenv": "^5.0.1",
+    "moment": "^2.22.1",
+    "ramda": "^0.25.0",
     "tedious": "^2.6.1",
-    "uuid": "^3.2.1"
+    "to-bool": "^0.0.1",
+    "uuid": "^3.2.1",
+    "winston": "^2.4.2"
   }
 }
